# MPL

./: .gitmodules  COPYING
MPL/: .rational.hpp.swp  CMakeLists.txt  Makefile_old  OLD_dyn_int.hpp  OLD_dyn_rational.hpp  algorithms.hpp  container_traits.hpp  dyn_buffer.hpp  fixed_width.hpp  int_container.hpp  int_container2.hpp  int_container3.hpp  parse_benchmark_results.py  parse_integer_results.py  parse_rational_results.py  rational.hpp  stack_allocator.hpp  static_flexible_width.hpp  sum_integers_benchmark_results_processed.csv  sum_integers_benchmark_results_raw.csv  sum_rationals_benchmark_results_processed.csv  sum_rationals_benchmark_results_raw.csv  sum_squares_benchmark_results_processed.csv  sum_squares_benchmark_results_raw.csv  test.cpp  test2.cpp  utility.hpp  wrapper.hpp  wrapper_crtp.hpp
MPL.xcodeproj/: project.pbxproj
MPL.xcodeproj/xcshareddata/xcschemes/: MPL.xcscheme
MPL.xcodeproj/xcuserdata/jonathantanner.xcuserdatad/xcschemes/: xcschememanagement.plist
MPL/algorithms/: add_sub.hpp  compare.hpp  divide.hpp  divide_small.hpp  from_int.hpp  from_string.hpp  gcd.hpp  mult.hpp  shift.hpp  to_string.hpp  utility.hpp
MPL/test/: .int_container_fuzz_operations.cpp.swp  CMakeLists.txt  algorithms.cpp  benchmarks.cpp  int_container.cpp  int_container2.cpp  int_container3.cpp  int_container_fuzz_operations.cpp  rational.cpp  wrapper.cpp
